--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <div class="column side">
           <h2>Choose your Semester</h2>
           <div class="btn-group">
-              <button onclick="window.location.href='Bsc1.html';">B.Sc-I</button><br>
-              <button onclick="window.location.href='Bsc2.html';">B.Sc-II</button><br>
-              <button onclick="window.location.href='Bsc3.html';">B.Sc-III</button><br>
-              <button onclick="window.location.href='Bsc4.html';">B.Sc-IV</button><br>
-              <button onclick="window.location.href='Bsc5.html';">B.Sc-V</button><br>
-              <button onclick="window.location.href='Bsc6.html';">B.Sc-VI</button><br>
+              <button onclick="window.location.href='bsc1.html';">B.Sc-I</button><br>
+              <button onclick="window.location.href='bsc2.html';">B.Sc-II</button><br>
+              <button onclick="window.location.href='bsc3.html';">B.Sc-III</button><br>
+              <button onclick="window.location.href='bsc4.html';">B.Sc-IV</button><br>
+              <button onclick="window.location.href='bsc5.html';">B.Sc-V</button><br>
+              <button onclick="window.location.href='bsc6.html';">B.Sc-VI</button><br>
             </div>
         </div>
       
